--- a/css/main.css
+++ b/css/main.css
@@ -50,10 +50,6 @@ body{
 	color: #D3D3D3;
 }
 
-#top-container li a:active {
-	color: #7fc5e6;
-}
-
 .navbar-brand {
 	margin-left: 10px !important;
 	margin-top: 10px;
@@ -81,7 +77,7 @@ body{
 
 #navbar {
 		padding-right: 20px !important;
-		margin-top: 10px;
+		padding-top: 10px;
 }
 
 h1{
@@ -188,6 +184,15 @@ with a static div?? or maybe jsut define height as a constant since that wont ma
 	width: 420px;
 	margin-right: auto;
 	margin-left: auto;
+}
+
+.number {
+	margin-left: -30px;
+	margin-top: -30px;
+}
+
+.selected {
+	color: #7fc5e6 !important;
 }
 
 #buttonContainer {
