--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-/*TODO: photoshop slides onto background and replace images with the result*/
-
-
 @font-face{
 	font-family: Gotham;
 	src: local('☺'),
@@ -32,6 +29,9 @@ body{
 	margin-bottom: 90px;
 }
 
+.nav li a {
+	text-align: center;
+}
 
 #inner-container {
 	margin-top: 60px;
@@ -168,18 +168,24 @@ with a static div?? or maybe jsut define height as a constant since that wont ma
 	background: white;
 	border: 1px solid;
 	border-color: #E5E5E4;
-
 	height: 140px;
 	margin-bottom: 20px;
+
 }
 
+.textFormat {
+	text-align: left;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 8px;
+}
 .aboutContainer {
 	background: white;
 	border: 1px solid;
 	border-color: #E5E5E4;
-	padding-left: 5px;
-	padding-right: 5px;
-	height: 140px;
+	padding-left: 10px;
+	padding-right: 10px;
+	height: 90px;
 	margin-bottom: 20px;
 	width: 420px;
 	margin-right: auto;
@@ -193,6 +199,7 @@ with a static div?? or maybe jsut define height as a constant since that wont ma
 
 .selected {
 	color: #7fc5e6 !important;
+
 }
 
 #buttonContainer {
@@ -236,6 +243,8 @@ with a static div?? or maybe jsut define height as a constant since that wont ma
 	margin-bottom: 20px;
 	margin-left: 0px;
 	margin-right: 0px;
+	padding-left: 10px;
+	padding-right: 10px;
 
 }
 
@@ -253,6 +262,19 @@ with a static div?? or maybe jsut define height as a constant since that wont ma
 	text-align: center;
 }
 
+#whatWeDo{
+	background: white;
+	border: 1px solid;
+	border-color: #E5E5E4;
+}
+
 .alignLeft {
 	text-align: left;
+}
+
+.textStyle{
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
