--- a/css/main.css
+++ b/css/main.css
@@ -271,9 +271,16 @@ margin-left: auto;
 	text-align: left;
 }
 
-.textStyle{
+.textStyle {
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 15px;
 	padding-bottom: 15px;
+}
+
+@media screen and (max-width: 501px)
+{
+	body p {
+		text-align: center !important;
+	}
 }
