--- a/css/main.css
+++ b/css/main.css
@@ -253,12 +253,9 @@ a:hover{color: #7fc5e6;}
 	text-align: left !important;
 }
 
-form {
-	text-align:center;
-}
-
-.form-control {
-	max-width: 480px;
+.bio-container {
+	padding-left: 8px;
+	padding-right: 8px;
 }
 
 @media screen and (max-width: 990px)
